# MOOS-pStartLogic

./: .gitignore  CMakeLists.txt  Readme.md  StartLogic.cpp  StartLogic.h  StartLogic_Info.cpp  StartLogic_Info.h  main.cpp  pStartLogic.moos
schema/: retransmit_schema.h  retransmit_schema.json  running_message_schema.h  start_condition_schema.h  start_condition_schema.json  stop_condition_schema.h  stop_condition_schema.json  warning_message_schema.h  warning_message_schema.json
